@@ -1,4 +1,10 @@
 
+Change Log Update (00.00.46)
+* 2016-09-04
++ More work on the signup process.  Most of the questions are all set.
+  Still small things for validation, some stuff for detection needed for backspace
+  and then the final verify and save.  After that can start on the logon process.
+
 Change Log Update (00.00.45)
 * 2016-08-22
 + Added Several Updates and Fixes for Linux/OSX Terminals
